@@ -131,6 +131,7 @@ General Changes
   UNDERTAKING)
 - Lifesaved monsters will reassess their equipment, so they will equip an
   amulet if that slot is free now, or equip armor if that was disintegrated.
+- Some peaceful dialogue for mplayers.
 
 Quest Nemesis Changes
 - Lord Surtur can create level-shaking earthquakes when he attacks.
